<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wear GoPro Remote</string>
    <string name="action_send_logs">Send logs</string>
    <string name="title_activity_main">GoProController Test</string>
    <string name="action_mode_video">Video</string>
    <string name="action_mode_photo">Photo</string>
    <string name="action_mode_burst">Burst</string>
    <string name="action_mode_timelapse">Timelapse</string>
    <string name="action_video_vga60">WVGA - 60fps</string>
    <string name="action_video_vga60">WVGA - 120fps</string>
    <string name="action_video_vga60">WVGA - 240fps</string>
    <string name="action_video_72030">720p - 30fps</string>
    <string name="action_video_720240">720p - 240fps</string>
    <string name="action_video_720120">720p - 120fps</string>
    <string name="action_video_72060">720p - 60fps</string>
    <string name="action_video_96030">960p - 30fps</string>
    <string name="action_video_108030">1080p - 30fps</string>
    <string name="action_video_108060">1080p - 60fps</string>
    <string name="action_video_1080120">1080p - 120fps</string>
    <string name="action_video_27k60">2.7k - 60fps</string>
    <string name="action_video_27k30">2.7k - 30fps</string>
    <string name="action_video_1440p30">1440p - 30fps</string>
    <string name="action_video_4k15">4k - 15fps</string>
    <string name="action_video_4k24">4k - 24fps</string>
    <string name="action_video_4k30">4k - 30fps</string>
    <string name="action_interval_halfsecond">0.5 second</string>
    <string name="action_interval_1second">1 second</string>
    <string name="action_interval_2second">2 seconds</string>
    <string name="action_interval_5second">5 seconds</string>
    <string name="action_interval_10second">10 seconds</string>
    <string name="action_interval_30second">30 seconds</string>
    <string name="action_interval_60second">60 seconds</string>
    <string name="title_activity_settings">Wear GoPro Remote</string>
    <string name="preference_category_wifi_title">WiFi Settings</string>
    <string name="preference_wifi_name_title">WiFi SSID</string>
    <string name="preference_wifi_password_title">WiFi Password</string>
    <string name="preference_category_watch_title">Watch Settings</string>
    <string name="preference_watch_shake_shutter_mode_title">Trigger shutter in camera mode:</string>
    <string name="preference_watch_shake_level_title">Shake level</string>
    <string name="preference_wifi_test_title">Test Connection</string>
    <string name="status_connection">Connecting…</string>
    <string name="status_not_connected">Could not connect to camera.</string>
    <string name="status_connected">Connection Successfully!</string>
    <string name="value_enabled">Enabled</string>
    <string name="value_disabled">Disabled</string>
    <string name="preference_category_version_title">Version</string>
    <string name="preference_wifi_restore_network_title">Restore WiFi network</string>
    <string name="notification_tittle">Wear GoPro Remote</string>
    <string name="action_stop">Stop</string>
    <string name="status_connection_failed">Connection failed.</string>
    <string name="status_connection_connected">Connected to %s</string>
    <string name="status_connection_disconnecting">Disconnecting…</string>
    <string name="status_connection_starting">Starting up…</string>
    <string name="status_connection_connecting">Connecting…</string>
    <string name="status_connection_camera_off">Connected. Camera Off</string>
    <string name="preference_watch_preview_enabled_key">preference_watch_preview_enabled</string>
    <string name="preference_watch_preview_enabled_title">Picture Preview</string>
    <string name="status_connection_connected1">Connected</string>
    <string name="status_connection_noconfig">GoPro WiFi and password not configured.</string>
    <string name="label_connect_to_gp_wifi">Please connect this device to your GoPro WiFi.</string>
    <string name="email_support" translatable="false">ranametal@users.sf.net</string>
    <string name="preference_wifi_autostart_title">Auto start app</string>
    <string name="status_googleapi_error">Can\'t connect to Google API Service.</string>
    <string name="status_no_wearable_node">Can\'t find wearable device.</string>
    <string name="setup_dialog_message">GoPro WiFi settings are not configured. Please connect this device to your GoPro WiFi network.\n\nIf this device is connected to your GoPro please press  \'Config now\' otherwise press \'WiFi settings\' and connect this device to yor GoPro network.</string>
    <string name="toast_wifi_configured">Wear GoPro Remote WiFi settings configured successfully!</string>
    <string name="setup_dialog_title">Setup</string>
    <string name="setup_dialog_setup_button">Setup now</string>
    <string name="setup_dialog_open_wifi_settings_button">WiFi settings</string>
    <string name="setup_dialog_manual_config_button">Manual Config</string>

    <string-array name="preference_watch_shake_shutter_mode_entries">
        <item>Default</item>
        <item>Video</item>
        <item>Photo</item>
        <item>Burst</item>
        <item>Timelapse</item>
    </string-array>
    <string-array name="preference_watch_shake_shutter_mode_values">
        <item>-1</item>>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="preference_watch_shake_level_entries">
        <item>Disabled</item>
        <item>Very weak</item>
        <item>Weak</item>
        <item>Medium</item>
        <item>Strong</item>
        <item>Very strong</item>
    </string-array>
    <string-array name="preference_watch_shake_level_values">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>>
    </string-array>

</resources>
